2013-10-11  Naveen H.S  <Naveen.Hurugalawadi@caviumnetworks.com>

	* machmode.h: Port the definition of GET_MODE_UNIT_BITSIZE from
	mainline.

2013-10-10  Jakub Jelinek  <jakub@redhat.com>
	
	PR middle-end/58670
	* stmt.c (expand_asm_operands): Add FALLTHRU_BB argument,
	if any labels are in FALLTHRU_BB, use a special label emitted 
	immediately after the asm goto insn rather than label_rtx 
	of the LABEL_DECL.
	(expand_asm_stmt): Adjust caller.
	* cfgrtl.c (commit_one_edge_insertion): Force splitting of
	edge if the last insn in predecessor is a jump with single successor,
	but it isn't simplejump_p.

2013-08-30  Marek Polacek  <polacek@redhat.com>

	* Makefile.in (ubsan.o): Add.
	(c-family/c-ubsan.o): Add.
	(builtins.o): Add ubsan.h dependency.
	* ubsan.h: New file.
	* ubsan.c: New file.
	* common.opt: Add -fsanitize=undefined option.
	(flag_sanitize): Add variable.
	(fsanitize=): Add option.  Add Driver.
	(fsanitize=thread): Remove option.
	(fsanitize=address): Likewise.
	(static-libubsan): New option.
	* doc/invoke.texi: Document the new flag and -static-libubsan.
	* sanitizer.def (DEF_SANITIZER_BUILTIN): Define.
	(BUILT_IN_UBSAN_HANDLE_BUILTIN_UNREACHABLE): Define.
	* builtin-attrs.def (ATTR_COLD): Define.
	(ATTR_COLD_NOTHROW_LEAF_LIST): Define.
	* builtins.def (BUILT_IN_UBSAN_HANDLE_DIVREM_OVERFLOW,
	BUILT_IN_UBSAN_HANDLE_SHIFT_OUT_OF_BOUNDS): Define.
	* flag-types.h (sanitize_code): New enum.
	* opts.c (common_handle_option): Parse command line arguments
	of -fsanitize=.  Add -fsanitize=unreachable option.
	* varasm.c (get_variable_section): Adjust.
	(assemble_noswitch_variable): Likewise.
	(assemble_variable): Likewise.
	(output_constant_def_contents): Likewise.
	(categorize_decl_for_section): Likewise.
	(place_block_symbol): Likewise.
	(output_object_block): Likewise.
	* builtins.def: Likewise.
	* toplev.c (compile_file): Likewise.
	(process_options): Likewise.
	* cppbuiltin.c: Likewise.
	* tsan.c (tsan_pass): Likewise.
	(tsan_gate): Likewise.