@@ -1,3 +1,18 @@
+2013-12-03  Manjunath Matti  <mmatti@caviumnetworks.com>
+
+	Backported:
+	2013-11-26  Terry Guo  <terry.guo@arm.com>
+
+	gcc/
+        * config/arm/arm.c (require_pic_register): Handle high pic base
+        register for thumb-1.
+        (arm_load_pic_register): Also initialize high pic base register.
+        * doc/invoke.texi: Update documentation for option -mpic-register.
+
+	gcc/testsuite/
+        * gcc.target/arm/thumb1-pic-high.c: New case.
+        * gcc.target/arm/thumb1-pic-single-base.c: New case.
+
 2013-11-06  Andrew Pinski  <apinski@cavium.com>
 
 	Bug #8614
